[tool.poetry]
name = "parquet-viewer"
version = "0.1.0"
description = ""
authors = ["Your Name <klev.paul@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "parquet_viewer"}]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"
lark = "^1.1.3"
pyarrow = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
