[tool.poetry]
name = "parquet-viewer"
version = "0.1.0"
description = "GUI application for reading *.parquet files"
authors = ["Pavel <klev.paul@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "parquet_viewer"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PyQt5 = "^5.15.7"
lark = "^1.1.3"
pyarrow = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "^5.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parquet-viewer = "parquet_viewer.__main__:main"

[tool.poetry.build]
script = "build_exe.sh"